src/test/ui/const-generics/defaults/intermixed-lifetime.stderr
error: lifetime parameters must be declared prior to const parameters
  --> $DIR/intermixed-lifetime.rs:6:28
   |
LL | struct Foo<const N: usize, 'a, T = u32>(&'a (), T);
   |           -----------------^^---------- help: reorder the parameters: lifetimes, then types, then consts: `<'a, T, const N: usize>`

error: aborting due to previous error

